--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,9 @@ name = "crosspost_rs"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 serenity = { version = "^0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
 tokio = { version = "^1.16.1", features = ["macros", "rt-multi-thread"] }
+
+[profile.release]
+lto = true
