Added release flag back to docker image

--- a/assets/Dockerfile
+++ b/assets/Dockerfile
@@ -10,4 +10,4 @@ RUN cargo fetch
 COPY token.txt ./assets/token.txt
 COPY whitelist.txt ./assets/whitelist.txt
 
-RUN cargo build
+RUN cargo build --release
