--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 serenity = { version = "^0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
 tokio = { version = "^1.16.1", features = ["macros", "rt-multi-thread"] }
+sqlx = { version = "^0.5.10", features = ["runtime-tokio-rustls"] }
 
 [profile.release]
 lto = true
