--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ sqlx = { version = "^0.5.10", features = ["runtime-tokio-rustls", "sqlite"] }
 poise = { git = "https://github.com/kangalioo/poise", branch = "master" }
 dotenv = "^0.15.0"
 time = "^0.3.7"
+sysinfo = "^0.23.5"
+toml = "^0.5.8"
+lazy_static = "^1.4.0"
 
 [profile.release]
 lto = true
