--- a/assets/Dockerfile
+++ b/assets/Dockerfile
@@ -1,7 +1,5 @@
 FROM archlinux
-RUN pacman -Syu --noconfirm rustup git base-devel
-RUN pacman --noconfirm -Scc
-RUN rustup toolchain install stable-x86_64-unknown-linux-gnu
+RUN pacman -Syu --noconfirm git base-devel rust
 RUN git clone https://github.com/FlareFlo/crosspost_rs.git
 WORKDIR ./crosspost_rs
 
@@ -11,3 +9,10 @@ COPY token.txt ./assets/token.txt
 COPY whitelist.txt ./assets/whitelist.txt
 
 RUN cargo build --release
+
+RUN mv target/release/crosspost_rs crosspost_rs
+RUN rm -rf target
+RUN pacman --noconfirm -Rns rust
+RUN pacman --noconfirm -Scc
+
+RUN ./crosspost_rs
